# 3DEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
Project.Engine/: CMakeLists.txt  Doxyfile
Project.Engine/Documentation/html/: _component_manager_8hpp_source.html  _e_c_s_engine_8hpp_source.html  _entity_manager_8hpp_source.html  _event_entity_deleted_8hpp_source.html  _event_manager_8hpp_source.html  _g_l_renderer_8hpp_source.html  _g_l_shader_8hpp_source.html  _g_l_window_8hpp_source.html  _game_engine_8hpp_source.html  _graphic_system_8hpp_source.html  _i_component_8hpp_source.html  _i_engine_8hpp_source.html  _i_entity_8hpp_source.html  _i_event_8hpp_source.html  _i_event_listener_8hpp_source.html  _i_renderer_8hpp_source.html  _i_shader_8hpp_source.html  _i_system_8hpp_source.html  _i_texture_8hpp_source.html  _i_window_8hpp_source.html  _logger_8hpp_source.html  _material_component_8hpp_source.html  _mesh_component_8hpp_source.html  _physics_system_8hpp_source.html  _rigid_body_component_8hpp_source.html  _system_manager_8hpp_source.html  _texture_8hpp_source.html  _texture_atlas_8hpp_source.html  _transform_component_8hpp_source.html  _types_8hpp_source.html  _utils_8h_source.html  annotated.html  annotated_dup.js  class_common_1_1_i_engine-members.html  class_common_1_1_i_engine.html  class_common_1_1_i_engine.js  class_common_1_1_i_engine__inherit__graph.map  class_common_1_1_i_engine__inherit__graph.md5  class_common_1_1_i_renderer-members.html  class_common_1_1_i_renderer.html  (+233 more)
Project.Engine/Documentation/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js
Project.Engine/src/: Types.hpp
Project.Engine/src/Common/: IEngine.hpp  IRenderer.hpp  IShader.hpp  ITexture.hpp  IWindow.hpp  Utils.cpp  Utils.h
Project.Engine/src/Core/: Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  Configuration.cpp  Configuration.h  GLWindow.cpp  GLWindow.hpp  GameEngine.cpp  GameEngine.hpp  InputSystem.cpp  InputSystem.hpp  ScriptComponent.hpp  ScriptingSystem.cpp  ScriptingSystem.hpp  TransformComponent.hpp
Project.Engine/src/EntityComponentSystem/: ComponentManager.cpp  ComponentManager.hpp  ECSEngine.cpp  ECSEngine.hpp  EntityManager.cpp  EntityManager.hpp  IComponent.hpp  IEntity.hpp  ISystem.hpp  SystemManager.cpp  SystemManager.hpp
Project.Engine/src/Event/: EventEntityDeleted.hpp  EventManager.cpp  EventManager.hpp  IEvent.hpp  IEventListener.hpp
Project.Engine/src/Graphics/: GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GraphicSystem.hpp  GraphicsSystem.cpp  MaterialComponent.hpp  MeshComponent.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
Project.Engine/src/Logging/: Logger.cpp  Logger.hpp
Project.Engine/src/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBodyComponent.hpp
Project.Engine/src/Scripting/: Bindings.cpp  CSHost.cpp  CSHost.h  ManagedScriptComponent.hpp  NativeScriptComponent.hpp  ScriptingSystem.cpp  ScriptingSystem.hpp
Project.Game/: CMakeLists.txt  Doxyfile
Project.Game/Documentation/html/: _cube_8hpp_source.html  annotated.html  class_cube-members.html  class_cube.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html
Project.Game/Documentation/html/search/: classes_0.js
Project.Game/src/: Camera.cpp  Camera.h  Cube.cpp  Cube.hpp  main.cpp
Project.UnitTests/: CMakeLists.txt
Project.UnitTests/src/: Classes.hpp  test_file.cpp
libraries/lodepng/: lodepng.cpp
resources/: frag.shad  runtimeconfig.json  vertex.shad
resources/Scripting/: Scripting.sln
resources/Scripting/ProjectGame/: Lib.cs  ProjectGame.csproj  myscript.cs
resources/Scripting/Scripting.Core/: Bindings.cs  Logger.cs  Script.cs  ScriptManager.cs
